[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ricci"
version = "0.1.0"
description = "Discrete Ricci flow for metric deformation on triangle meshes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "S. Kaji"},
]
dependencies = [
    "numpy",
    "scipy",
    "torch>=2.0",
    "plyfile",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = ["jupyter", "tqdm"]

[tool.setuptools.packages.find]
include = ["ricci*"]
